--- a/fbapprove.json
+++ b/fbapprove.json
@@ -1,6 +1,6 @@
 {
-  "publish_actions" : true,
-  "reach_level" : true,
+  "publish_actions" : false,
+  "reach_level" : false,
   "gain_experience" : true,
   "get_achievements" : true,
   "buy_booster" : true,
